syntax = "proto3";

package fr.rob.world.api.grpc.character;

option java_multiple_files = true;

service Character {
  rpc Describe(DescribeRequest) returns (CharacterInfo) {}
}

message DescribeRequest {
  uint32 characterId = 1;
}

message CharacterInfo {
  uint32 characterId = 1;
  string name = 2;
  InstanceInfo instance = 3;
}

message InstanceInfo {
  uint32 mapId = 1;
  uint32 zoneId = 2;
  uint32 instanceId = 3;
}